# repo-sync-tool

./: .gitattributes  .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  EXECUTION.md  LICENSE  PRODUCT.md  README.md  SECURITY.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json  vite.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
AGENTS/efforts/: README.md
AGENTS/efforts/E-01-foundation/: plan.md  spec.md
AGENTS/efforts/E-02-persistence/: plan.md
AGENTS/efforts/E-03-git-engine/: spec.md
AGENTS/efforts/E-05-error-taxonomy/: plan.md
AGENTS/efforts/E-06-ipc-contract/: plan.md
AGENTS/efforts/E-08-scheduler/: spec.md
AGENTS/efforts/E-09-activity-log/: plan.md
AGENTS/efforts/E-10-github-client/: plan.md  spec.md
AGENTS/efforts/E-12-tracer-bullet/: spec.md
AGENTS/session-log/: 2026-06-01_10-07_claude_reposync-v1-architecture-decisions-brief.md
crates/reposync-core/: Cargo.toml
crates/reposync-core/migrations/: 0001_init.sql  0001_tracer.sql  0002_activity_settings.sql  0003_cadence_inherit.sql  0004_default_cadence_inherit.sql  0005_branch_intel.sql  0006_auto_update.sql  README.md
crates/reposync-core/src/: activity.rs  autostart.rs  db.rs  error.rs  github.rs  ipc.rs  lib.rs  notify.rs  paths.rs  policy.rs  repo.rs  scheduler.rs  store.rs  summary.rs
crates/reposync-core/src/git/: cli.rs  discover.rs  fixtures.rs  inspect.rs  mod.rs
crates/reposync-core/tests/: git_fixture_cross_check.rs  policy_fixture_matrix.rs  scheduler_integration.rs
docs/: README.md  architecture.md  backlog.md  explanation.md  faq.md  user-guide.md
docs/internal/: product-requirements.md  program-roadmap.md  strategy-and-roadmap.md  v1-architecture-and-decisions.md
docs/internal/mockups/: 01-dashboard-mac-light.html  02-repos-mac-dark.html  03-tray-popup.html  04-activity-windows-dark.html  05-onboarding-windows-light.html  06-settings-mac-dark.html  07-repo-detail-mac-light.html  08-dashboard-windows-mica.html  index.html
docs/internal/release-plans/: README.md  release-checklist.yaml  runbook_cut-tag-release.md
docs/internal/release-plans/_unassigned/E-19-tray-popover/: spec.md
docs/internal/release-plans/plan_v0.9.0/: ci-plan.md  edge-wiring-plan.md  execution-plan.md  executive-summary.md  feature-inventory.md  features-and-outcomes.md  plan_v0.9.0.md
docs/internal/release-plans/plan_v0.9.0/E-01-foundation/: implementation-plan.md  spec.md
docs/internal/release-plans/plan_v0.9.0/E-02-persistence/: spec.md
docs/internal/release-plans/plan_v0.9.0/E-03-git-engine/: implementation-plan.md  spec.md
docs/internal/release-plans/plan_v0.9.0/E-04-git-fixture-harness/: implementation-plan.md  spec.md
docs/internal/release-plans/plan_v0.9.0/E-05-error-taxonomy/: spec.md
docs/internal/release-plans/plan_v0.9.0/E-06-ipc-contract/: spec.md
docs/internal/release-plans/plan_v0.9.0/E-07-update-policy-engine/: implementation-plan.md  spec.md
docs/internal/release-plans/plan_v0.9.0/E-08-scheduler/: implementation-plan.md  spec.md
docs/internal/release-plans/plan_v0.9.0/E-09-activity-log/: spec.md
docs/internal/release-plans/plan_v0.9.0/E-10-github-client/: spec.md
docs/internal/release-plans/plan_v0.9.0/E-11-summary-engine/: implementation-plan.md  spec.md
docs/internal/release-plans/plan_v0.9.0/E-12-tracer-bullet/: implementation-plan.md  macos-signing-runbook.md  spec.md
docs/internal/release-plans/plan_v0.9.0/E-13-tray-menu/: implementation-plan.md  spec.md
docs/internal/release-plans/plan_v0.9.0/E-14-notifications/: implementation-plan.md  spec.md
docs/internal/release-plans/plan_v0.9.0/E-15-autostart/: implementation-plan.md  spec.md
docs/internal/release-plans/plan_v0.9.0/E-16-groups/: implementation-plan.md  spec.md
docs/internal/release-plans/plan_v0.9.0/E-17-branch-intel/: implementation-plan.md  spec.md
docs/internal/release-plans/plan_v0.9.0/E-18-auto-update/: implementation-plan.md  spec.md
scripts/: bump-version.mjs  check-updater-config-hygiene.mjs  updater-e2e.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.updater-e2e.conf.json  tauri.updater-prod.conf.json  tracer-test.manifest
src-tauri/capabilities/: default.json
src-tauri/src/: autostart.rs  events.rs  lib.rs  localtime.rs  main.rs  notify.rs  opener.rs  tray.rs  updates.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/windows/: mod.rs
src-tauri/tests/: export_bindings.rs
src/components/: add-repos-dialog.tsx  app-shell.tsx  async-panel.tsx  empty-state.tsx  group-dialog.tsx  groups-nav.tsx  intel-signals.tsx  lag-signal.tsx  repo-detail.tsx  status-badge.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  drawer.tsx  input.tsx  switch.tsx  toast.tsx
src/hooks/: queries.ts  use-async.ts  use-modal-a11y.ts  use-toast.ts
src/lib/: bindings.ts  ipc.ts  status.ts
src/screens/: activity.tsx  dashboard.tsx  repos.tsx  settings.tsx
