[package]
name = "reposync-core"
version.workspace = true
edition.workspace = true
license.workspace = true

# reposync-core is the Tauri-free logic crate. The load-bearing invariant (AC2)
# is that this crate must NOT depend on tauri or any tauri-* crate, even
# transitively. The week-1 tracer (E-02/E-03 first slices) adds the persistence,
# git engine, IPC payload, and error taxonomy here.
#
# Dependency hygiene rules enforced in CI and verified by `cargo tree`:
#   - git2 is vendored-libgit2 ONLY (no OpenSSL, no libssh2, no network
#     transports); all network git goes through the git CLI in git::cli.
#   - sqlx uses the RUNTIME query API (sqlx::query / query_as / bind), so no
#     DATABASE_URL and no compile-time macros.
[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
# `serde_json` feature gives serde_json::Value a specta::Type impl (used by the
# frozen AppError wire shape); `derive` provides the #[derive(specta::Type)] macro.
specta = { workspace = true, features = ["derive", "serde_json"] }
serde_json = { workspace = true }
tokio = { workspace = true }
git2 = { workspace = true, default-features = false, features = ["vendored-libgit2"] }
# `macros` is required for the sqlx::migrate! macro (it lives in sqlx-macros);
# the runtime query API itself does not need it, but migrate! does.
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }

[dev-dependencies]
tempfile = "3"
